--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <header>
+        <img src="https://th.bing.com/th/id/R.79860dfb50ad5bd0c6dd6e0cccc71f78?rik=nXD23sT3gV5cHA&pid=ImgRaw&r=0" alt="">
         <nav>
-        <li></li>
-    <li></li>
-    <li></li>
-    <li></li></nav>
-</header>
+            <li><a href="">Programs</a></li>
+            <li><a href="">Events</a></li>
+            <li><a href="">Resources</a></li>
+            <li><a href="">Get Involved</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Shop</a></li>
+        </nav>
+    </header>
 </body>
 </html>
