--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="">Get Involved</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Shop</a></li>
+            <button id="btnDonate" type="Donate"></button>
         </nav>
     </header>
 </body>
