--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
             <button id="btnDonate" type="Donate"></button>
         </nav>
     </header>
+    <script src="script.js"></script>
 </body>
+
 </html>
