Titulo de femergy

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
             <li><a href="">Get Involved</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Shop</a></li>
-            <button id="btnDonate" type="Donate"></button>
         </nav>
+        <button id="btnDonate" type="Donate"></button>
     </header>
+    <main>
+        <section>
+            <h1>Femergy</h1>
+            <p>Empowering dispo girls</p>
+        </section>
+    </main>
 </body>
 </html>
